fix alignment of icons and names in menus

--- a/client/homebrew/editor/snippetbar/snippetbar.less
+++ b/client/homebrew/editor/snippetbar/snippetbar.less
@@ -52,6 +52,10 @@
 				margin-left  : 5px;
 			}
 		}
+		.left-slot {
+			width : 2em;
+			flex  : 0 0 auto;
+		}
 		.name { margin-right  : auto; }
 		.beta {
 			align-self    : center;
